--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,25 +1,47 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'io.gitlab.arturbosch.detekt'
+    id 'kotlin-parcelize'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
-
 android {
-    compileSdk 32
-
+    compileSdkVersion 30
+    buildToolsVersion '30.0.2'
     defaultConfig {
         applicationId "com.n11.n11testcase"
-        minSdk 21
-        targetSdk 32
+        minSdkVersion 19
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+            applicationIdSuffix ".dev"
+            testCoverageEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        release {
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    flavorDimensions "default"
+    productFlavors {
+        liveFlavor {
+            resValue "string", "app_name", "n11testcase"
+            buildConfigField("String", "BASE_URL", "\"https://itunes.apple.com\"")
+            buildConfigField("String", "GITHUB_TOKEN", "\"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\"")
+        }
+        devFlavor {
+            resValue "string", "app_name", "n11testcase - Dev"
+            buildConfigField("String", "BASE_URL", "\"https://itunes.apple.com\"")
+            buildConfigField("String", "GITHUB_TOKEN", "\"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\"")
         }
     }
     compileOptions {
@@ -29,15 +51,30 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
+    buildFeatures {
+        dataBinding true
+    }
+    testOptions {
+        execution 'ANDROIDX_TEST_ORCHESTRATOR'
+        unitTests.returnDefaultValues = true
+        unitTests.includeAndroidResources true
+    }
 }
 
 dependencies {
+    //implementation 'androidx.room:room-common:2.4.2'
+    //implementation 'androidx.room:room-ktx:2.4.2'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
-    implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //room
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
+
+
+    addDependencies(dependencies, libraries)
+    addDependencies(dependencies, testLibraries)
 }
