--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.1.1' apply false
-    id 'com.android.library' version '7.1.1' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+buildscript {
+    apply from: rootProject.file("gradle/dependencies.gradle")
+    repositories {
+        google()
+    }
+    addRepos(repositories)
+    dependencies {
+        addDependencies(dependencies, gradlePlugins)
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+    }
+    addRepos(repositories)
 }
 
 task clean(type: Delete) {
