--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 android {
-    compileSdkVersion 30
+    compileSdkVersion 32
     buildToolsVersion '30.0.2'
     defaultConfig {
         applicationId "com.n11.n11testcase"
-        minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion 29
+        targetSdkVersion 32
+        versionCode 2
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
     }
@@ -35,12 +35,12 @@ android {
     productFlavors {
         liveFlavor {
             resValue "string", "app_name", "n11testcase"
-            buildConfigField("String", "BASE_URL", "\"https://itunes.apple.com\"")
+            buildConfigField("String", "BASE_URL", "\"https://api.github.com/\"")
             buildConfigField("String", "GITHUB_TOKEN", "\"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\"")
         }
         devFlavor {
             resValue "string", "app_name", "n11testcase - Dev"
-            buildConfigField("String", "BASE_URL", "\"https://itunes.apple.com\"")
+            buildConfigField("String", "BASE_URL", "\"https://api.github.com/\"")
             buildConfigField("String", "GITHUB_TOKEN", "\"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\"")
         }
     }
@@ -71,7 +71,7 @@ dependencies {
 
     //room
     implementation "androidx.room:room-runtime:2.4.2"
-    implementation "androidx.room:room-ktx:2.4.2"
+    implementation "androidx.room:room-ktx:2.2.6"
     kapt "androidx.room:room-compiler:2.4.2"
 
 
