--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -35,7 +35,7 @@ def versions = [
         junitVersion           : '4.13',
         mockkVersion           : '1.10.2',
         coreTestingVersion     : '2.1.0',
-        robolectricVersion     : '4.3',
+        robolectricVersion     : '4.5-alpha-3',
         testCoreVersion        : '1.3.0',
         coroutinesTestVersion  : '1.4.2'
 ]
